--- a/app/index.html
+++ b/app/index.html
@@ -4,12 +4,40 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <style type="text/css">
-    div[data-role="page"] {
+    header {
+        padding: 10px;
+        border-bottom: 1px solid #ccc;
+        margin: 0 0 10px 0;
+    }
+    header h1 {
+        text-align: center;
+        font-size: 18px;
+    }
+    footer {
+        padding: 10px;
+        border-top: 1px solid #ccc;
+        margin: 10px 0 0 0;
+    }
+    section.content {
+        padding: 0 10px;
+    }
+    .back {
+        position: relative;
+        float: left;
+        top: 14px;
+        background-color: #ccc;
+        border-radius: 10px;
+        display: inline-block;
+        padding: 4px;
+        cursor: pointer;
+        box-shadow: 0px 1px 1px #666666;
+    }
+    /*div[data-role="page"] {
     	display: none;
     }
     div[data-role="page"].ui-page-active {
     	display: block;
-    }
+    }*/
     /*
 * jQuery Mobile v1.4.5
 * http://jquerymobile.com
